<resources>
    <string name="app_name">Foodie</string>

    <string name="signed">Signed</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="searchSize">10</string>
    <string name="templeLon">-75.152955</string>
    <string name="templeLat">39.9809459</string>

    <string name="title_activity_maps">Map</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_settings">Settings</string>
    <string name="action_mapview">Map View</string>
    <string name="action_balanceview">View Balance</string>
    <string name="action_listview">Eateries List</string>
    <string name="action_favorites">Favorites</string>

</resources>